2017-02-03  Konstantin Tokarev  <annulen@yandex.ru>

        [CMake] RelWithDebInfo builds are super broken at runtime
        https://bugs.webkit.org/show_bug.cgi?id=163897

        Reviewed by Michael Catanzaro.

        * Source/cmake/OptionsCommon.cmake: Apply -fno-strict-aliasing,
        -fno-exceptions, and -fno-rtti flags to all configurations,
        instead of only "Release".

2017-02-03  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK] Add initial implementation of resource usage overlay
        https://bugs.webkit.org/show_bug.cgi?id=167731

        Reviewed by Michael Catanzaro.

        Enable RESOURCE_USAGE.

        * Source/cmake/OptionsGTK.cmake:

2017-02-02  Alex Christensen  <achristensen@webkit.org>

        Build fix after r211602
        https://bugs.webkit.org/show_bug.cgi?id=167758

        * Source/Makefile:
        Don't build libwebrtc by default.  It's not used yet anyway.

2017-02-02  David Kilzer  <ddkilzer@apple.com>

        Make the Makefile great again after r211570, r211572

        * Makefile: Restore tabs and ending newline.

2017-02-02  Jonathan Bedard  <jbedard@apple.com>

        Unreviewed build fix after r211570

        * Makefile: Placed back.

2017-02-01  Yusuke Suzuki  <utatane.tea@gmail.com>

        Propagate networking errors correctly for import() operator
        https://bugs.webkit.org/show_bug.cgi?id=167501

        Reviewed by Ryosuke Niwa.

        * Source/ModuleFetchFailureKind.h: Added.

2017-01-31  Carlos Garcia Campos  <cgarcia@igalia.com>

        Unreviewed. Update OptionsGTK.cmake and NEWS for 2.15.4 release.

        * Source/cmake/OptionsGTK.cmake: Bump version numbers.

2017-01-24  Joseph Pecoraro  <pecoraro@apple.com>

        Fold USER_TIMING into WEB_TIMING and make it a RuntimeEnabledFeature
        https://bugs.webkit.org/show_bug.cgi?id=167394

        Reviewed by Ryosuke Niwa.

        * Source/cmake/OptionsEfl.cmake:
        * Source/cmake/OptionsWin.cmake: