@@ -140,7 +140,6 @@ find_package(Cairo 1.10.2 REQUIRED)
 find_package(Fontconfig 2.8.0 REQUIRED)
 find_package(LibGcrypt 1.6.0 REQUIRED)
 find_package(LibXml2 2.8.0 REQUIRED)
-find_package(LibXslt 1.1.7 REQUIRED)
 find_package(ICU REQUIRED)
 find_package(JPEG REQUIRED)
 find_package(PNG REQUIRED)
@@ -148,6 +147,10 @@ find_package(Sqlite REQUIRED)
 find_package(Threads REQUIRED)
 find_package(WebP REQUIRED)
 find_package(ZLIB REQUIRED)
+
+if (ENABLE_XSLT)
+    find_package(LibXslt 1.1.7 REQUIRED)
+endif ()
 
 option(ENABLE_ECORE_X "Enable Ecore_X specific usage (cursor, bell)" ON)
 if (ENABLE_ECORE_X)
