@@ -40,7 +40,6 @@ find_package(ICU REQUIRED)
 find_package(JPEG REQUIRED)
 find_package(LibSoup 2.42.0 REQUIRED)
 find_package(LibXml2 2.8.0 REQUIRED)
-find_package(LibXslt 1.1.7 REQUIRED)
 find_package(PNG REQUIRED)
 find_package(Sqlite REQUIRED)
 find_package(Threads REQUIRED)
@@ -219,6 +218,10 @@ if (ENABLE_GAMEPAD_DEPRECATED OR ENABLE_GEOLOCATION)
     list(APPEND glib_components gio-unix)
 endif ()
 find_package(GLIB 2.36 REQUIRED COMPONENTS ${glib_components})
+
+if (ENABLE_XSLT)
+    find_package(LibXslt 1.1.7 REQUIRED)
+endif ()
 
 if (ENABLE_ACCELERATED_2D_CANVAS)
     if (GLX_FOUND)
