@@ -1,3 +1,15 @@
+2017-02-07  Olivier Blin  <olivier.blin@softathome.com>
+
+        [GTK][Efl] Do not require LibXslt if XSLT is disabled
+        https://bugs.webkit.org/show_bug.cgi?id=167931
+
+        This fixes build with --no-xslt, when the libxslt dev files are not installed.
+
+        Reviewed by Michael Catanzaro.
+
+        * Source/cmake/OptionsEfl.cmake:
+        * Source/cmake/OptionsGTK.cmake:
+
 2017-02-03  Konstantin Tokarev  <annulen@yandex.ru>
 
         [CMake] RelWithDebInfo builds are super broken at runtime
